--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "get-string-colors",
   "version": "0.0.1",
   "description": "Get colors of a string using Google images and get-image-colors",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/tommilligan/get-string-colors",
   "author": "Tom Milligan",
   "license": "Apache-2.0",
   "dependencies": {
     "get-image-colors": "^1.8.1",
     "googleapis": "^19.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.4.1"
+  },
+  "scripts": {
+    "test": "mocha",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha"
   }
 }
