--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "dependencies": {
     "get-image-colors": "^1.8.1",
     "google-images": "^2.1.0",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "got": "^6.7.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "dotenv-safe": "^4.0.4",
     "eslint": "^3.19.0",
     "eslint-plugin-mocha": "^4.9.0",
     "istanbul": "^0.4.5",
