--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "debug": "^2.6.8",
     "dotenv-safe": "^4.0.4",
     "eslint": "^3.19.0",
     "eslint-plugin-mocha": "^4.9.0",
