All unit, most integ working

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mocha-eslint": "^3.0.1",
     "rewire": "^2.5.2",
     "sinon": "^2.3.1",
-    "sinon-chai": "^2.10.0"
+    "sinon-chai": "^2.10.0",
+    "sinon-stub-promise": "^4.0.0"
   },
   "scripts": {
     "test": "mocha",
